--- a/views/form-products.hbs
+++ b/views/form-products.hbs
@@ -1,6 +1,8 @@
-<form action="/api/productos" method="post">
+<form action="/productos" method="post">
         <input type="text" name="title" placeholder="Titulo" required>
         <input type="number" name="price" placeholder="0.00" required>
         <input type="url" name="thumbnail" placeholder="thumbnail" required>
         <input type="submit" value="Agregar">
 </form>
+
+<a href="/productos"><button>Ir a productos</button></a>
