--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenidos a productos</h1>
+    <h1 class="title">Bienvenidos a productos</h1>
     {{{body}}}
 </body>
 </html>
+
+<style>
+    .title {
+        text-align: center;
+    }
+</style>
