--- a/desafios/public/views/logout.hbs
+++ b/desafios/public/views/logout.hbs
@@ -13,7 +13,7 @@
 
 <body>
     <div class="alert alert-warning" role="alert">
-        <h1>Te desconectaste {{this.userName}}, te esperamos la próxima!</h1>
+        <h1>Hasta Luego {{this.userName}}, te esperamos la próxima!</h1>
     </div>
 
     <!-- JavaScript Bundle with Popper -->
